--- a/assets/styles/stylesheet.scss
+++ b/assets/styles/stylesheet.scss
@@ -792,3 +792,84 @@ h4 {
     padding: 2vh 0;
   }
 }
+
+/* #Progress Circle
+================================================== */
+.progress-wrap {
+  position: fixed;
+  right: 25px;
+  bottom: 25px;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
+  display: block;
+  border-radius: 50px;
+  box-shadow: inset 0 0 0 2px rgba(255,255,255,0.2);
+  z-index: 10000;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(15px);
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.progress-wrap.active-progress {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+#progress-wrap-arrow {
+  position: absolute;
+  // font-family: 'unicons';
+  // content: '\e84b';
+  text-align: center;
+  line-height: 46px;
+  font-size: 16px;
+  color: #00bfa5;
+  left: 0;
+  top: 0;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
+  display: block;
+  z-index: 1;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.progress-wrap svg path {
+  fill: none;
+}
+
+.progress-wrap svg.progress-circle path {
+  stroke: #00bfa5;
+  stroke-width: 4;
+  box-sizing: border-box;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+// test below
+
+#cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: gold;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+  transition: .7s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  p {
+    font-size: 2em;
+  }
+}
+
+.upDisapper {
+  transform: translateY(-100%);
+}
