--- a/assets/styles/stylesheet.scss
+++ b/assets/styles/stylesheet.scss
@@ -512,6 +512,13 @@ h4 {
 }
 // test below
 
+@supports (-webkit-touch-callout: none) {
+  #cover {
+    /* The hack for Safari */
+    height: -webkit-fill-available;
+  }
+}
+
 #cover {
   position: fixed;
   top: 0;
@@ -558,31 +565,12 @@ h4 {
   0% {
     transform: translateY(0%);
   }
-  // 4% {
-  // 	transform: translateY(-1.54%);
-  // }
-  //
-  // 8% {
-  // 	transform: translateY(-0.66%);
-  // }
   18% {
     transform: translateY(-6.25%);
   }
-  // 26% {
-  // 	transform: translateY(-1.63%);
-  // }
-  // 46% {
-  // 	transform: translateY(-24.98%);
-  // }
   46% {
     transform: translateY(-1.99%);
   }
-  // 76% {
-  // 	transform: translateY(-56.44%);
-  // }
-  // 88% {
-  // 	transform: translateY(-89.11%);
-  // }
   100% {
     transform: translateY(-100%);
   }
