--- a/assets/styles/stylesheet.scss
+++ b/assets/styles/stylesheet.scss
@@ -333,7 +333,13 @@ h4 {
   }
 
   .hero {
-    height: 100%;
+    margin-bottom: 0;
+  }
+
+  @supports (-webkit-touch-callout: none) {
+    .hero {
+      height: -webkit-fill-available;
+    }
   }
 
   .hero .title {
@@ -357,7 +363,7 @@ h4 {
 
   .hero .scroll-box {
     height: 100%;
-    height: 15%;
+    height: 20vh;
     position: absolute;
     bottom: 0;
     text-align: center;
@@ -369,13 +375,13 @@ h4 {
   }
 
   .hero .scroll-box .scroll-arrow {
-    height: 100%;
+    height: 20vh;
     overflow: hidden;
   }
 
   .hero .scroll-box .scroll-arrow .black-bar {
     margin: 0 auto;
-    height: 100%;
+    height: 20vh;
     width: 2px;
     background: $black;
   }
@@ -392,8 +398,9 @@ h4 {
   .hero .scroll-box .scroll-arrow .golden-bar {
     width: 2px;
     margin: 0 auto;
-    height: 100%;
-    background: #D5B891;
+    height: 20vh;
+    background: $gold;
+    transform: translateX(-1px);
     animation: scroll 2s infinite;
   }
 
@@ -554,7 +561,6 @@ h4 {
 
 @supports (-webkit-touch-callout: none) {
   #cover {
-    /* The hack for Safari */
     height: -webkit-fill-available;
   }
 }
@@ -566,10 +572,13 @@ h4 {
     transform: translateY(0%);
   }
   18% {
-    transform: translateY(-6.25%);
+    transform: translateY(-12%);
   }
   46% {
-    transform: translateY(-1.99%);
+    transform: translateY(-2%);
+  }
+  95% {
+    transform: translateY(-92%);
   }
   100% {
     transform: translateY(-100%);
@@ -577,7 +586,7 @@ h4 {
 }
 
 .bounce-up {
-  animation: bounce-up-animation 1.5s forwards;
+  animation: bounce-up-animation 2s forwards;
 }
 
 .hw100 {
