--- a/assets/styles/stylesheet.scss
+++ b/assets/styles/stylesheet.scss
@@ -1,7 +1,8 @@
 // variables
 $black: #1d1d1f;
-$gold: #ceb286; // common
+$gold: #ceb286;
 
+// common
 html {
   color: $black;
   font-size: 16px;
@@ -21,6 +22,10 @@ h4 {
 
 .text-gold {
   color: $gold;
+}
+
+.background-black {
+  background-color: $black;
 }
 
 .bold {
@@ -49,6 +54,24 @@ h4 {
 .overflow-hidden {
   overflow: hidden;
 }
+
+.margin-bottom-0 {
+  margin-bottom: 0;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-space-around {
+  justify-content: space-around;
+  align-items: center;
+}
 // common
 // common parts
 
@@ -60,7 +83,6 @@ h4 {
   justify-content: center;
   align-items: center;
   top: 0;
-  background: #cfd8dc;
   z-index: 99;
 
   h2 {
@@ -116,7 +138,7 @@ h4 {
 }
 
 .hero .scroll-box {
-  height: 15vh;
+  height: 20vh;
   position: absolute;
   bottom: 0;
   text-align: center;
@@ -133,7 +155,7 @@ h4 {
 
 .hero .scroll-box .scroll-arrow .black-bar {
   margin: 0 auto;
-  height: 13vh;
+  height: 20vh;
   width: 2px;
   background: $black;
 }
@@ -150,7 +172,7 @@ h4 {
 .hero .scroll-box .scroll-arrow .golden-bar {
   width: 2px;
   margin: 0 auto;
-  height: 13vh;
+  height: 20vh;
   background: #D5B891;
   animation: scroll 2s infinite;
 }
@@ -161,94 +183,7 @@ h4 {
   background-color: #1c313a;
 }
 // skills
-// who am I
-
-.who-am-i {
-  background: #cfd8dc;
-  width: 100%;
-}
-
-.who-am-i h3 {
-  text-align: center;
-  font-size: 20px;
-  padding: 5vh 0;
-}
-
-.who-am-i .hobbies .hobby-cards {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-}
-
-.who-am-i .hobbies .hobby-card {
-  width: 35vw;
-  border: 1px solid $black;
-  padding: 16px;
-  margin: 5vh 0;
-  line-height: 32px;
-}
-
-.who-am-i .hobbies .hobby-card h4 {
-  text-align: center;
-}
-
-.who-am-i .hobbies .hobby-card .images-box {
-  padding-top: 2vh;
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-}
-
-.who-am-i .hobbies .hobby-card .images-box a {
-  display: block;
-}
-
-.who-am-i .hobbies .hobby-card .images-box img {
-  height: 20vh;
-}
-
-.who-am-i .fav-people {}
-
-.who-am-i .fav-people .person-cards {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-}
-
-.who-am-i .fav-people .person-cards .person-card {
-  width: 15vw;
-}
-
-.who-am-i .fav-people .person-cards .person-card h4 {
-  text-align: center;
-  margin-bottom: 16px;
-}
-
-.who-am-i .fav-people .person-cards .person-card img {
-  max-width: 100%;
-  margin-bottom: 16px;
-}
-
-.who-am-i .dream .dream-cards {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-}
-
-.who-am-i .dream .dream-cards .dream-card {
-  width: 25vw;
-  border: 1px solid $black;
-  padding: 16px;
-  margin: 5vh 0;
-  line-height: 32px;
-}
-
-.who-am-i .dream .dream-cards .dream-card h4 {
-  text-align: center;
-}
-
-/* #Progress Circle
-================================================== */
+//Progress Circle
 .progress-wrap {
   position: fixed;
   right: 25px;
@@ -278,7 +213,7 @@ h4 {
   text-align: center;
   line-height: 46px;
   font-size: 16px;
-  color: #00bfa5;
+  color: #ff1744;
   left: 0;
   top: 0;
   height: 46px;
@@ -295,7 +230,7 @@ h4 {
 }
 
 .progress-wrap svg.progress-circle path {
-  stroke: #00bfa5;
+  stroke: #ff1744;
   stroke-width: 4;
   box-sizing: border-box;
   -webkit-transition: all 200ms linear;
@@ -335,7 +270,6 @@ h4 {
   .hero {
     margin-bottom: 0;
   }
-
   @supports (-webkit-touch-callout: none) {
     .hero {
       height: -webkit-fill-available;
@@ -403,119 +337,6 @@ h4 {
     transform: translateX(-1px);
     animation: scroll 2s infinite;
   }
-
-  .who-am-i {
-    background: #cfd8dc;
-    width: 100%;
-  }
-
-  .who-am-i h3 {
-    text-align: center;
-    font-size: 20px;
-    padding: 3vh 0;
-  }
-
-  .who-am-i p {
-    line-height: 28px;
-  }
-
-  .who-am-i .section-title {
-    text-align: center;
-    position: sticky;
-    height: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 0;
-    background: #cfd8dc;
-    z-index: 10;
-  }
-
-  .who-am-i .section-title h2 {
-    font-size: 30px;
-    font-weight: bold;
-  }
-
-  .who-am-i .hobbies {}
-
-  .who-am-i .hobbies .hobby-cards {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    flex-wrap: wrap;
-  }
-
-  .who-am-i .hobbies .hobby-card {
-    width: 80vw;
-    border: 1px solid $black;
-    padding: 16px;
-    margin: 5vh 0;
-  }
-
-  .who-am-i .hobbies .hobby-card h4 {
-    text-align: center;
-  }
-
-  .who-am-i .hobbies .hobby-card .images-box {
-    padding-top: 2vh;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-  }
-
-  .who-am-i .hobbies .hobby-card .images-box a {
-    display: block;
-  }
-
-  .who-am-i .hobbies .hobby-card .images-box img {
-    height: 20vh;
-  }
-
-  .who-am-i .fav-people {}
-
-  .who-am-i .fav-people .person-cards {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    flex-wrap: wrap;
-  }
-
-  .who-am-i .fav-people .person-cards .person-card {
-    width: 70vw;
-    text-align: center;
-  }
-
-  .who-am-i .fav-people .person-cards .person-card img {
-    max-width: 50%;
-    margin-bottom: 16px;
-    border-radius: 5px;
-  }
-
-  .who-am-i .fav-people .person-cards .person-card h4 {
-    margin-bottom: 16px;
-  }
-
-  .who-am-i .fav-people .person-cards .person-card p {
-    margin-bottom: 5vh;
-    text-align: left;
-  }
-
-  .who-am-i .dream .dream-cards {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .who-am-i .dream .dream-cards .dream-card {
-    width: 80vw;
-    border: 1px solid $black;
-    padding: 16px;
-  }
-
-  .who-am-i .dream .dream-cards .dream-card h4 {
-    text-align: center;
-  }
 }
 // test below
 
@@ -541,7 +362,6 @@ h4 {
   .progress {
     width: 70%;
     background-color: white;
-
     @keyframes progress-bar-animation {
       0% {
         width: 0;
@@ -558,7 +378,6 @@ h4 {
     }
   }
 }
-
 @supports (-webkit-touch-callout: none) {
   #cover {
     height: -webkit-fill-available;
@@ -571,22 +390,22 @@ h4 {
   0% {
     transform: translateY(0%);
   }
+
   18% {
     transform: translateY(-12%);
   }
-  46% {
+
+  70% {
     transform: translateY(-2%);
   }
-  95% {
-    transform: translateY(-92%);
-  }
+
   100% {
     transform: translateY(-100%);
   }
 }
 
 .bounce-up {
-  animation: bounce-up-animation 2s forwards;
+  animation: bounce-up-animation 1.5s forwards;
 }
 
 .hw100 {
