loading animation and svg animation

--- a/assets/styles/stylesheet.scss
+++ b/assets/styles/stylesheet.scss
@@ -412,24 +412,18 @@ h4 {
     font-size: 1.5em;
   }
 
-  // .progress {
-  //   width: 70%;
-  //   background-color: white;
-  //   @keyframes progress-bar-animation {
-  //     0% {
-  //       width: 0;
-  //     }
-  //
-  //     100% {
-  //       width: 100%;
-  //     }
-  //   }
-  //
-  //   .determinate {
-  //     background-color: $gold;
-  //     animation: progress-bar-animation 2s forwards cubic-bezier(0.65, 0, 0.35, 1);
-  //   }
-  // }
+  #cover__progress-bar-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 30vh;
+    width: 80vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+  }
 }
 @supports (-webkit-touch-callout: none) {
   #cover {
@@ -487,6 +481,20 @@ h4 {
   a {
     color: #29b6f6 !important;
   }
+}
+
+.fade-out {
+  @keyframes fade-out {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+
+    }
+  }
+
+  animation: fade-out 0.5s forwards;
 }
 // structure
 // z-index
