--- a/assets/styles/stylesheet.scss
+++ b/assets/styles/stylesheet.scss
@@ -424,6 +424,10 @@ h4 {
     justify-content: space-around;
     flex-direction: column;
   }
+
+  svg {
+    width: 70%;
+  }
 }
 @supports (-webkit-touch-callout: none) {
   #cover {
@@ -495,6 +499,10 @@ h4 {
   }
 
   animation: fade-out 0.5s forwards;
+}
+
+.hide {
+  display: none;
 }
 // structure
 // z-index
